<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ViewDanhSachSinhVien">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0000"
        android:gravity="center"
        android:text="@string/crud_database"
        android:textColor="#00ffff"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtMaSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Mã sinh viên"
        android:hint="@string/m_sinh_vi_n"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtTenSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Tên sinh viên"
        android:hint="@string/t_n_sinh_vi_n"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtGioiTinhSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Giới tính sinh viên"
        android:hint="@string/gi_i_t_nh"
        android:inputType="text"
        android:padding="16dp"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDocDL"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="#ffFF00"
            android:padding="16dp"
            android:text="@string/c_dl"
            android:textColor="#ff0000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnThemDL"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="#ffFF00"
            android:padding="16dp"
            android:text="@string/th_m"
            android:textColor="#ff0000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnXoaDL"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="#ffFF00"
            android:padding="16dp"
            android:text="@string/x_a"
            android:textColor="#ff0000"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSuaDL"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:backgroundTint="#ffFF00"
            android:padding="16dp"
            android:text="@string/s_a"
            android:textColor="#ff0000"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvDanhSachSinhVien"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>